<resources>
    <string name="app_name">Tag Control</string>
    <string name="app_version">V1.0.3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>

    <!--Actions -->
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="action_scan">Scan</string>

    <!--Menu -->
    <string name="menu_tag">Tags</string>
    <string name="menu_inventory">Inventories</string>
    <string name="menu_settings">Settings</string>

    <!--Commons-->
    <string name="management">Management</string>
    <string name="theme">Dark theme</string>
    <string name="not_found">not found</string>

    <!-- Dialog Confirm Remove -->
    <string name="dialog_confirm_remove_title">Are you sure?</string>
    <string name="dialog_confirm_remove_message">Caution! The {{entity_name}} {{entity_id}} will be removed.</string>
    <string name="dialog_confirm_remove_button_remove">Remove</string>
    <string name="dialog_confirm_remove_button_cancel">Cancel</string>

    <!-- Dialog Scan Tag -->
    <string name="dialog_scan_tag_title">Scanning tag...</string>
    <string name="dialog_scan_tag_message">Supported tags:\n\t- NFC A\n\t- NFC B\n\t- NFC F\n\t- NFC V\n\t- NFC NDEF</string>
    <string name="dialog_scan_tag_button_stop">Stop</string>

    <!-- Tag -->
    <string name="tag_id">ID</string>
    <string name="tag_id_required">ID is required. Please, scan one tag.</string>
    <string name="tag_name">Name</string>
    <string name="tag_description">Description</string>

    <!-- Inventory -->
    <string name="inventory">Inventory</string>
    <string name="inventory_tag_id">Tag id</string>
    <string name="inventory_tag_name">Tag name</string>
    <string name="inventory_expiration_date">Expiration date</string>
    <string name="inventory_quantity">Quantity</string>
    <string name="inventory_quantity_required">Quantity is required</string>
    <string name="inventory_quantity_too_low">Quantity too low</string>

    <!-- Settings -->
    <string name="settings_languages">Languages</string>
    <string-array name="settings_languages">
        <item>English - US (en)</item>
        <item>Portuguese - BR (pt_BR)</item>
    </string-array>
    <string name="settings_about">About</string>
    <string name="settings_about_message">\nDeveloped by Guilherme Henrique\nE-mail: guihgo.contato@gmail.com\n\nBuy me a coffee:\n0x07525F186A823a56ac0A1F358535f937208EcAbf</string>
</resources>