<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_tags">

    <fragment
        android:id="@+id/nav_tags"
        android:name="com.guihgo.inventorycontroll.ui.tags.TagsFragment"
        android:label="@string/menu_tag"
        tools:layout="@layout/fragment_tags" />

    <fragment
        android:id="@+id/nav_inventory"
        android:name="com.guihgo.inventorycontroll.ui.inventory.InventoryFragment"
        android:label="@string/menu_inventory"
        tools:layout="@layout/fragment_inventory" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.guihgo.inventorycontroll.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_slideshow" />
</navigation>