<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:title="@string/management">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_tags"
                    android:icon="@drawable/ic_label"
                    android:title="@string/menu_tag" />
                <item
                    android:id="@+id/nav_inventory"
                    android:icon="@drawable/ic_inventory"
                    android:title="@string/menu_inventory" />
            </group>

        </menu>

    </item>

    <group>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_quiz"
            android:title="@string/menu_about" />
    </group>

<!--    <item-->
<!--        android:id="@+id/management"-->
<!--        android:title="@string/management"-->
<!--        android:checkableBehavior="single">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_tags"-->
<!--                android:icon="@drawable/ic_label"-->
<!--                android:title="@string/menu_tag" />-->
<!--            <item-->
<!--                android:id="@+id/nav_inventory"-->
<!--                android:icon="@drawable/ic_inventory"-->
<!--                android:title="@string/menu_inventory" />-->
<!--        </menu>-->
<!--    </item>-->
<!--    <group android:checkableBehavior="single">-->
<!--        <item-->
<!--            android:id="@+id/nav_settings"-->
<!--            android:icon="@drawable/ic_settings"-->
<!--            android:title="@string/menu_settings" />-->
<!--        <item-->
<!--            android:id="@+id/nav_about"-->
<!--            android:icon="@drawable/ic_quiz"-->
<!--            android:title="@string/menu_about" />-->
<!--    </group>-->
</menu>