<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="@dimen/activity_vertical_margin"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    tools:context=".ui.tag.TagAddEdit">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tag_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tag_id"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_contactless"
        app:prefixText="#"
        app:endIconContentDescription="@string/action_scan">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tag_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tag_name"
        app:endIconMode="clear_text"

        android:layout_marginTop="@dimen/line_break">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:maxLength="100"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tag_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tag_description"
        app:endIconMode="clear_text"
        android:layout_marginTop="@dimen/line_break">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>