<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/activity_horizontal_margin"
    android:paddingVertical="@dimen/activity_vertical_margin"
    tools:context=".ui.tag.TagAddEdit">

    <LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inventory_tag_id"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/inventory_tag_id"
            app:prefixText="#">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inventory_tag_name"
            style="?attr/textInputFilledStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/line_break"
            android:enabled="false"
            android:hint="@string/inventory_tag_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="100"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inventory_expiration_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/line_break"
            android:hint="@string/inventory_expiration_date"
            app:endIconDrawable="@drawable/ic_edit_calendar"
            app:endIconMode="custom"
            app:endIconContentDescription="@string/inventory_expiration_date">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:inputType="text"
                android:maxLength="100"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/layout_top"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/inventory_quantity"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/inventory_quantity_minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:shapeAppearance="?attr/shapeAppearanceLargeComponent"
                android:textAppearance="?attr/textAppearanceLabelLarge"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:text="-"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inventory_quantity"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="?attr/textAppearanceBodyLarge"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/inventory_quantity_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:shapeAppearance="?attr/shapeAppearanceLargeComponent"
                android:textAppearance="?attr/textAppearanceLabelLarge"
                android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                android:text="+"/>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>